--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
       context: .
       dockerfile: Dockerfile
     volumes:
-      - ./app/{PROJECT_NAME}:/var/www/html  # Directly mounting your app folder
+      - ./app/livewire-counter:/var/www/html
     expose:
       - "9000"
     networks:
@@ -13,9 +13,9 @@ services:
   nginx:
     image: nginx:alpine
     ports:
-      - "8080:80"  # Map host port 8080 to container port 80
+      - "80:80"
     volumes:
-      - ./app/{PROJECT_NAME}:/var/www/html  # Same app folder for Nginx
+      - ./app/livewire-counter:/var/www/html
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - php
@@ -33,7 +33,23 @@ services:
     ports:
       - "3306:3306"
     volumes:
-      - mariadb_data:/var/lib/mysql  # Named volume for MariaDB data
+      - db_data:/var/lib/mysql
+    networks:
+      - app-network
+
+  redis:
+    image: redis:alpine
+    ports:
+      - "6379:6379"
+    networks:
+      - app-network
+
+  redis-commander:
+    image: rediscommander/redis-commander:latest
+    environment:
+      REDIS_HOSTS: local:redis:6379
+    ports:
+      - "8081:8081"
     networks:
       - app-network
 
@@ -42,4 +58,4 @@ networks:
     driver: bridge
 
 volumes:
-  mariadb_data: {}  # Named volume for the MariaDB data
+  db_data: {}
